AUT-1904 Use Java 17 and Maven Wrapper